      + Eliminate use of quit_after_hostname by creating HOSTNAME_SANS_NETWORK
        from HOSTNAME and DOMAIN_SANS_NETWORK from DOMAIN
      + Use DHCP host-name as the default hostname if no hostname is set
        (Closes: #239591)
      + Write host-name provided to the DHCP client in order to get a lease
        on the "hostname" option line for the interface in /e/n/i
      + Clean up code
        . Always use spaces for indentation
        . Improve comments
        . Reorder state machine states
        . Move kill_dhcp_client() to top of file
    - prebaseconfig
      + Don't cp /etc/dhclient.conf and /etc/dhcp3/dhclient.conf to target

 -- Joshua Kwan <joshk@triplehelix.org>  Fri, 18 Jun 2004 23:26:15 -0700

netcfg (0.70) unstable; urgency=medium

  * Joshua Kwan
    - Brown paper bag upload.
    - Add the netcfg/disable_dhcp template, default to false.
    - usleep(1500) actually sleeps for 1500 _micro_seconds, not milliseconds.
      sleep(2) instead for simplicity.

 -- Joshua Kwan <joshk@triplehelix.org>  Tue, 15 Jun 2004 15:00:53 -0700

netcfg (0.69) unstable; urgency=medium

  * Sylvain Ferriol
    - fix error message during plip config. (Closes: #253361)
  * Christian Perrier
    - Remove trailing exclamation mark from netcfg/dhcp_success_note
    - Run debconf-updatepo and unfuzzy templates for removed exclamation mark
  * Joshua Kwan
    - Corrected reference to the pppconfig package. (Closes: #253086)
    - killall.sh: add grep -v grep (Closes: #253099)
    - Allow netcfg/disable_dhcp option that governs what use_dhcp is
      set to every time we start, instead of hardcoding true. Defaults
      to true, so default behavior has not changed. (Closes: #248147)
    - Fix /etc/hosts writing after much deliberation. (Closes: #247734)
    - Use a static buffer for mii-diag call.
    - Sleep for 1.5 seconds before mii-diag, because slow network cards
      just take that long to answer. And for those that take more that's
      just too bad.